--- a/projects/ring-chart/src/lib/ring-chart.component.html
+++ b/projects/ring-chart/src/lib/ring-chart.component.html
@@ -8,6 +8,8 @@
           class="section"
           *ngFor="let item of leftSemiRingSections$$"
           [style.border-color]="item.color"
+          [style.border-top-right-radius.px]="diameter"
+          [style.border-bottom-right-radius.px]="diameter"
           [style.transform]="'rotate(' + item.rotation + 'deg)'"
           [style.z-index]="item.index">
       </div>
@@ -19,6 +21,8 @@
           class="section"
           *ngFor="let item of rightSemiRingSections$$"
           [style.border-color]="item.color"
+          [style.border-top-left-radius.px]="diameter"
+          [style.border-bottom-left-radius.px]="diameter"
           [style.transform]="'rotate(' + item.rotation + 'deg)'"
           [style.z-index]="item.index">
       </div>
