add ring thickness support

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <lib-ring-chart [sections]=sections [thickness]=thickness [diameter]=diameter></lib-ring-chart>
+  <lib-ring-chart [sections]="sections" [thickness]="thickness" [diameter]="diameter"></lib-ring-chart>
 </div>
 
 
