--- a/projects/ring-chart/src/lib/ring-chart.component.html
+++ b/projects/ring-chart/src/lib/ring-chart.component.html
@@ -6,7 +6,7 @@
        [style.height.px]="diameter">
       <div
           class="section"
-          *ngFor="let item of leftSemiRingSections$$"
+          *ngFor="let item of leftSections$$"
           [style.border-color]="item.color"
           [style.border-top-right-radius.px]="diameter"
           [style.border-bottom-right-radius.px]="diameter"
@@ -20,7 +20,7 @@
        [style.height.px]="diameter">
       <div
           class="section"
-          *ngFor="let item of rightSemiRingSections$$"
+          *ngFor="let item of rightSections$$"
           [style.border-color]="item.color"
           [style.border-top-left-radius.px]="diameter"
           [style.border-bottom-left-radius.px]="diameter"
