--- a/projects/ring-chart/src/lib/ring-chart.component.html
+++ b/projects/ring-chart/src/lib/ring-chart.component.html
@@ -1,32 +1,19 @@
 <div class="ring-container"
-     [style.width.px]="diameter"
-     [style.height.px]="diameter">
+     [ngStyle]="{'width.px': diameter, 'height.px': diameter}">
   <div class="semi-ring-container semi-ring-container-left"
-       [style.width.px]="diameter / 2"
-       [style.height.px]="diameter">
+       [ngStyle]="{'width.px': diameter / 2, 'height.px': diameter}">
       <div
           class="section"
-          *ngFor="let item of leftSections$$"
-          [style.border-color]="item.color"
-          [style.border-top-right-radius.px]="diameter"
-          [style.border-bottom-right-radius.px]="diameter"
-          [style.border-width.px]="thickness"
-          [style.transform]="'rotate(' + item.rotation + 'deg)'"
-          [style.z-index]="item.index">
+          *ngFor="let section of leftSections$$"
+          [ngStyle]="getStyles$$(section, 'right')">
       </div>
   </div>
   <div class="semi-ring-container semi-ring-container-right"
-       [style.width.px]="diameter / 2"
-       [style.height.px]="diameter">
+       [ngStyle]="{'width.px': diameter / 2, 'height.px': diameter}">
       <div
           class="section"
-          *ngFor="let item of rightSections$$"
-          [style.border-color]="item.color"
-          [style.border-top-left-radius.px]="diameter"
-          [style.border-bottom-left-radius.px]="diameter"
-          [style.border-width.px]="thickness"
-          [style.transform]="'rotate(' + item.rotation + 'deg)'"
-          [style.z-index]="item.index">
+          *ngFor="let section of rightSections$$"
+          [ngStyle]="getStyles$$(section, 'left')">
       </div>
   </div>
 </div>
