--- a/projects/ring-chart/src/lib/ring-chart.component.scss
+++ b/projects/ring-chart/src/lib/ring-chart.component.scss
@@ -29,3 +29,11 @@
   border-right: none;
   transform-origin: 100%;
 }
+
+.ring-center {
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
