add more examples to demo

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,35 @@
 <div class="container">
-  <lib-ring-chart [sections]="sections" [thickness]="thickness" [diameter]="diameter" [centerColor]="centerColor"></lib-ring-chart>
+  <div class="ring-container ring-1">
+    <lib-ring-chart [sections]="ring1$$.sections" [thickness]="ring1$$.thickness" [diameter]="ring1$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-2">
+    <lib-ring-chart [sections]="ring2$$.sections" [thickness]="ring2$$.thickness" [diameter]="ring2$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-3">
+    <lib-ring-chart [sections]="ring3$$.sections" [thickness]="ring3$$.thickness" [diameter]="ring3$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-4">
+    <lib-ring-chart [sections]="ring4$$.sections" [thickness]="ring4$$.thickness" [diameter]="ring4$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-5">
+    <lib-ring-chart [sections]="ring5$$.sections" [thickness]="ring5$$.thickness" [diameter]="ring5$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-6">
+    <lib-ring-chart [sections]="ring6$$.sections" [thickness]="ring6$$.thickness" [diameter]="ring6$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-7">
+    <lib-ring-chart [sections]="ring7$$.sections" [thickness]="ring7$$.thickness" [diameter]="ring7$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
+
+  <div class="ring-container ring-8">
+    <lib-ring-chart [sections]="ring8$$.sections" [thickness]="ring8$$.thickness" [diameter]="ring8$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+  </div>
 </div>
 
 
