--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -1,4 +1,15 @@
 .container {
+  display: grid;
+  grid-template-columns: 12vw 24vw 32vw 32vw;
+  grid-template-rows: 50vh 50vh;
+  height: inherit;
+}
+
+.ring-container {
+  position: relative;
+}
+
+lib-ring-chart {
   position: absolute;
   top: 50%;
   left: 50%;
