add api section to readme

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="ring-container ring-1">
+  <!-- <div class="ring-container ring-1">
     <lib-ring-chart [sections]="ring1$$.sections" [thickness]="ring1$$.thickness" [diameter]="ring1$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
   </div>
 
@@ -25,10 +25,10 @@
 
   <div class="ring-container ring-7">
     <lib-ring-chart [sections]="ring7$$.sections" [thickness]="ring7$$.thickness" [diameter]="ring7$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
-  </div>
+  </div> -->
 
   <div class="ring-container ring-8">
-    <lib-ring-chart [sections]="ring8$$.sections" [thickness]="ring8$$.thickness" [diameter]="ring8$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
+    <lib-ring-chart [sections]="ring8$$.sections"  [diameter]="ring8$$.diameter" [centerColor]="centerColor"></lib-ring-chart>
   </div>
 </div>
 
